; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_progress.c_xferinfo_cb.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_progress.c_xferinfo_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.per_transfer = type { i8*, i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xferinfo_cb(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.per_transfer*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.per_transfer*
  store %struct.per_transfer* %13, %struct.per_transfer** %11, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load %struct.per_transfer*, %struct.per_transfer** %11, align 8
  %16 = getelementptr inbounds %struct.per_transfer, %struct.per_transfer* %15, i32 0, i32 3
  store i8* %14, i8** %16, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load %struct.per_transfer*, %struct.per_transfer** %11, align 8
  %19 = getelementptr inbounds %struct.per_transfer, %struct.per_transfer* %18, i32 0, i32 2
  store i8* %17, i8** %19, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = load %struct.per_transfer*, %struct.per_transfer** %11, align 8
  %22 = getelementptr inbounds %struct.per_transfer, %struct.per_transfer* %21, i32 0, i32 1
  store i8* %20, i8** %22, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = load %struct.per_transfer*, %struct.per_transfer** %11, align 8
  %25 = getelementptr inbounds %struct.per_transfer, %struct.per_transfer* %24, i32 0, i32 0
  store i8* %23, i8** %25, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
